# kimp3

./: AGENTS.md  NEXT_ITERATION_PLAN.md  README.md  Test  Test2.py  args_parse.py  conf_parse.py  config.yaml  file_operations.py  kimp3-flow.drawio  kimp3.cfg  kimp3.py  lastfm.py  lastfm_test.py  main.py  pyproject.toml  song.py  tags.py
backup/: kimp3_backup.py
config/: config.example.yaml  link-xdg-config.sh  logging.example.yaml  tags.example.yaml
interface/: utils.py
src/kimp3/: __init__.py  __main__.py  backends.py  checks.py  config.py  config_loader.py  covers.py  encoding.py  executor.py  file_operations.py  lastfm.py  lastfm_test.py  lfm.py  logging_setup.py  lyrics.py  main.py  models.py  musicbrainz.py  planning.py  reporting.py  settings.py  song.py  songdir.py  strings_operations.py  tag_processing.py  tags.py  tags_old.py  test.ipynb  title_case.py
src/kimp3/interface/: utils.py
tests/: test_backends.py  test_config_loader.py  test_encoding.py  test_executor.py  test_lastfm.py  test_media_fixtures.py  test_models.py  test_musicbrainz.py  test_planning.py  test_reporting.py  test_song_write.py  test_songdir_planning.py  test_strings_operations.py  test_tag_processing.py  test_title_case.py
