[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kimp3"
version = "0.2.0"
description = "Self-contained music library manager that embeds metadata directly in audio files"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["music", "mp3", "tags", "metadata", "lastfm", "audio"]
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Utilities",
]
dependencies = [
    "beautifulsoup4>=4.13.3",
    "dotenv>=0.9.9",
    "music-tag>=0.4.3",
    "mutagen>=1.47.0",
    "pillow>=11.1.0",
    "pylast>=5.5.0",
    "python3-discogs-client>=2.8",
    "rich>=13.9.4",
]

[project.urls]
Homepage = "https://github.com/yourusername/kimp3"
Documentation = "https://github.com/yourusername/kimp3#readme"
Issues = "https://github.com/yourusername/kimp3/issues"
Source = "https://github.com/yourusername/kimp3"

[project.scripts]
kimp3 = "kimp3.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kimp3"]

[tool.hatch.version]
path = "src/kimp3/__init__.py"
